build: add libarchive to dockerfile